--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<div [@routeAnimations]="o && o.activatedRouteData
-      && o.activatedRouteData['animation']"><router-outlet #o="outlet"></router-outlet></div>
+<div [@routeAnimations]="o && o.activatedRouteData&& o.activatedRouteData['animation']">
+  <router-outlet #o="outlet"></router-outlet>
+</div>
