--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -22,5 +22,5 @@
   
 </div>
 <div class="right-proj-about"> 
-  <img src="../../assets/img/moshe_borouchov.jpeg" class="img-style-1"/>
+  <img src="../../assets/img/moshe_borouchov.png" class="img-style-1"/>
 </div>
